Some basic css, cleanup code

--- a/app/src/calendar/views/calendar.html
+++ b/app/src/calendar/views/calendar.html
@@ -1,4 +1,4 @@
-<div>
+<div class="calendar">
 	<label ng-bind="calendar[0].month | monthName"></label>
-	<ul><li ng-repeat="day in calendar" ng-bind="day.day"></li></ul>
+	<ul><li ng-repeat="day in calendar">{{ day.day }}</li></ul>
 </div>
