--- a/app/src/weekselector/views/weekselector.html
+++ b/app/src/weekselector/views/weekselector.html
@@ -1,1 +1,3 @@
-<ul><li ng-repeat="day in days" ng-bind="day"></li></ul>
+<div class="weekselector">
+	<ul><li ng-repeat="day in days" ng-bind="day"></li></ul>
+</div>
